# opentesarenapp

./: CMakeLists.txt  TODO  TODO.pyarenalinux_methods  configure.ac
WinArena/: Animation.cpp  Animation.h  DirectDrawWrapper.cpp  DirectDrawWrapper.h  GIFFile.cpp  GIFFile.h  Inventory.cpp  Inventory.h  LZWCodec.cpp  LZWCodec.h  MappedFile.cpp  MappedFile.h  MidiPlayer.cpp  MidiPlayer.h  MidiSong.cpp  MidiSong.h  ParseBSA.cpp  ParseBSA.h  Profiler.cpp  Profiler.h  Raster.cpp  Raster.h  SoundDriver.cpp  SoundDriver.h  TGA.h  Types.h  WinArena.cpp  WinArena.h  WinArena.vcproj  World.cpp  World.h  WorldBuilder.cpp  WorldData.cpp  resource.h
m4/.svn/: all-wcprops  entries
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  main.cpp  tags
src/.deps/: libopentesarena.Plo  main.Po
src/.svn/: all-wcprops  entries
src/.svn/text-base/: main.cpp.svn-base
src/dataextraction/: .todo  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bsacfa.cpp  bsacfa.h  bsadfa.cpp  bsadfa.h  bsafontelement.cpp  bsafontelement.h  bsaheader.cpp  bsaheader.h  bsaheadercfa.cpp  bsaheadercfa.h  bsaheaderdfa.cpp  bsaheaderdfa.h  bsaindex.cpp  bsaindex.h  bsaindexentry.cpp  bsapalette.cpp  bsapalette.h  globalbsa.cpp  globalbsa.h
src/dataextraction/.deps/: bsaheader.Plo  bsaheadercfa.Plo  bsaindex.Plo  bsaindexentry.Plo  dataextractionmain.Plo  globalbsa.Plo
src/dataextraction/.svn/: all-wcprops  entries
src/dataextraction/.svn/text-base/: bsaheader.cpp.svn-base  bsaindex.cpp.svn-base  bsaindex.h.svn-base  bsaindexentry.h.svn-base  dataextractionmain.cpp.svn-base  dataextractionmain.h.svn-base  globalbsa.h.svn-base
src/utils/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  subscriptableifstream.cpp  subscriptableifstream.h  utils.cpp  utils.h
src/utils/.deps/: mmapedstream.Plo  subscriptableifstream.Plo  subscriptableistream.Tpo  utils.Plo
src/utils/.svn/: all-wcprops  entries
src/utils/.svn/text-base/: utils.cpp.svn-base  utils.h.svn-base
