AM_CPPFLAGS = 														\
						-I.														\
						-I$(top_srcdir)								\
						-I$(srcdir)

noinst_LTLIBRARIES = libdataextraction.la

libdataextraction_la_SOURCES =	globalbsa.h							\
																globalbsa.cpp						\
																bsaheader.h							\
																bsaheader.cpp						\
																bsaheadercfa.h					\
																bsaheadercfa.cpp				\
																bsaindex.h							\
																bsaindex.cpp						\
																bsaindexentry.h					\
																bsaindexentry.cpp				\
																dataextractionmain.h		\
																dataextractionmain.cpp
