AM_CPPFLAGS = 														\
						-I.														\
						-I$(top_srcdir)								\
						-I$(srcdir)

noinst_LIBRARIES = libdataextraction.a

libdataextraction_a_SOURCES =	globalbsa.h							\
															globalbsa.cpp						\
															bsaheader.h							\
															bsaheader.cpp						\
															bsaheadercfa.h					\
															bsaheadercfa.cpp				\
															bsaheaderdfa.h					\
															bsaheaderdfa.cpp				\
															bsaindex.h							\
															bsaindex.cpp						\
															bsaindexentry.h					\
															bsaindexentry.cpp				\
															bsafontelement.h				\
															bsafontelement.cpp			\
															dataextractionmain.h		\
															dataextractionmain.cpp
