AM_CPPFLAGS =                             \
            -I$(top_srcdir)               \
            -I$(srcdir)

noinst_LIBRARIES = libutils.a

libutils_a_SOURCES = subscriptableifstream.h      \
                     subscriptableifstream.cpp    \
                     utils.h                      \
                     utils.cpp 
